Bugfix to pull pipeline: when a processor copy returns no event for its input, it incorrectly assumed that no more events were available, instead of moving on to the next copy.